add access restriction to admin pages

--- a/views/home/register.ejs
+++ b/views/home/register.ejs
@@ -3,7 +3,7 @@
       <div class="image-holder"></div>
       <form action="/users/register" method="post">
           <h2 class="text-center"><strong>Create</strong> an account.</h2>
-          <% include ./partials/messages %>
+          <% include ../partials/messages %>
           <div class="form-group">
             <input 
               class="form-control" 
