--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -2,7 +2,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body" style="background-color:lightgray">
       <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>Login</h1>
-      <% include ./partials/messages %>
+      <% include ../partials/messages %>
       <form action="/users/login" method="POST">
         <div class="form-group">
           <input
