--- a/views/home/product-detail.ejs
+++ b/views/home/product-detail.ejs
@@ -112,9 +112,9 @@
 
                         <div class="btn-addcart-product-detail size9 trans-0-4 m-t-10 m-b-10">
                             <!-- Button -->
-                            <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+                            <a href="products/<%= product[0]._id %>/addToCart" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4 btn">
                                 Add to Cart
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
