--- a/views/home/products.ejs
+++ b/views/home/products.ejs
@@ -187,15 +187,15 @@
         
                                     <div class="block2-btn-addcart w-size1 trans-0-4">
                                         <!-- Button -->
-                                        <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+                                        <a href="products/<%= product._id %>/addToCart" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4 btn">
                                             Add to Cart
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
         
                             <div class="block2-txt p-t-20">
-                                <a href="/products/<%= product.sku %>/" class="block2-name dis-block s-text3 p-b-5">
+                                <a href="/products/<%= product._id %>/" class="block2-name dis-block s-text3 p-b-5">
                                     <%= product.name %>
                                 </a>
         
