--- a/views/home/cart.ejs
+++ b/views/home/cart.ejs
@@ -4,7 +4,7 @@
 <!-- Title Page -->
 <section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url(/images/heading-pages-01.jpg);">
     <h2 class="l-text2 t-center">
-        Cart
+        Shopping Cart
     </h2>
 </section>
 
@@ -12,145 +12,71 @@
 <section class="cart bgwhite p-t-70 p-b-100">
     <% if (products) { %>
     <div class="container-fluid">
-            <!-- Cart item -->
-            <div class="container-table-cart pos-relative">
-                <div class="wrap-table-shopping-cart bgwhite">
-                    <table class="table-shopping-cart">
+        <div class="row">
+            <div class="col-sm-12 col-md-9 col-lg-9 table-responsive">
+                <table class="table table-light table-striped table-bordered table-hover mx-8 my-8">
+                    <thead>
                         <tr class="table-head">
-                            <th class="column-1"></th>
-                            <th class="column-2">Product</th>
-                            <th class="column-3">Price</th>
-                            <th class="column-4 p-l-70">Quantity</th>
-                            <th class="column-5">Total</th>
+                            <th scope="col" class="th-sm"></th>
+                            <th scope="col" class="th-sm">Product</th>
+                            <th scope="col" class="th-sm">Price</th>
+                            <th scope="col" class="th-sm">Quantity</th>
+                            <th scope="col" class="th-sm">Total</th>
+                            <th scope="col" class="th-sm">Action</th>
                         </tr>
-                        <% products.forEach(function (product) { %>
-                            <tr class="table-row">
-                                <td class="column-1">
-                                    <div class="cart-img-product b-rad-4 o-f-hidden">
-                                        <img src="<%= product.item.imageUrl[0] %>" alt="IMG-PRODUCT">
-                                    </div>
-                                </td>
-                                <td class="column-2"><%= product.item.name %></td>
-                                <td class="column-3">$<%= product.price %></td>
-                                <td class="column-4">
-                                    <div class="flex-w bo5 of-hidden w-size17">
-                                        <button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
-                                            <i class="fs-12 fa fa-minus" aria-hidden="true"></i>
-                                        </button>
-        
-                                        <input class="size8 m-text18 t-center num-product" type="number" name="num-product1" value="<%= product.qty %>">
-        
-                                        <button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
-                                            <i class="fs-12 fa fa-plus" aria-hidden="true"></i>
-                                        </button>
-                                    </div>
-                                </td>
-                                <td class="column-5">$<%= product.price * product.qty %></td>
-                            </tr>
-                        <% }); %>
-                    </table>
-                </div>
+                    </thead>
+                   <tbody>
+                    <% products.forEach(function (product) { %>
+                        <tr class="table-row">
+                            <td>
+                                <div class="cart-img-product b-rad-4 o-f-hidden">
+                                    <img class="image-fluid" src="<%= product.item.imageUrl[0] %>" alt="IMG-PRODUCT">
+                                </div>
+                            </td>
+                            <td><%= product.item.name %></td>
+                            <td>$<%= product.price %></td>
+                            <td>
+                                <input type="number" name="qty" id="qty" value="<%= product.qty %>">
+                            </td>
+                            <td>$<%= product.price * product.qty %></td>
+                            <td>
+
+                                <a href="" onclick="this.href='/cart/update?id=<%= product.item._id %>&qty=' + document.getElementById('qty').value" class="btn btn-secondary">
+                                    Update
+                                </a>
+
+                                <a href="/cart/remove/<%= product.item._id %>" class="btn btn-danger">
+                                    Remove
+                                </a>
+                            </td>
+                        </tr>
+                    <% }); %>
+                   </tbody>
+                </table>
+
+                
+
             </div>
-    
-            <div class="flex-w flex-sb-m p-t-25 p-b-25 bo8 p-l-35 p-r-60 p-lr-15-sm">
-                <div class="flex-w flex-m w-full-sm">
-                    <div class="size11 bo4 m-r-10">
-                        <input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="coupon-code" placeholder="Coupon Code">
-                    </div>
-    
-                    <div class="size12 trans-0-4 m-t-10 m-b-10 m-r-10">
-                        <!-- Button -->
-                        <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
-                            Apply coupon
-                        </button>
-                    </div>
-                </div>
-    
-                <div class="size10 trans-0-4 m-t-10 m-b-10">
-                    <!-- Button -->
-                    <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
-                        Update Cart
-                    </button>
-                </div>
-            </div>
-    
             <!-- Total -->
-            <div class="bo9 w-size18 p-l-40 p-r-40 p-t-30 p-b-38 m-t-30 m-r-0 m-l-auto p-lr-15-sm">
-                <h5 class="m-text20 p-b-24">
-                    Cart Totals
-                </h5>
-    
+            <div class="col-sm-12 col-md-3 col-lg-3">
+
                 <!--  -->
                 <div class="flex-w flex-sb-m p-b-12">
-                    <span class="s-text18 w-size19 w-full-sm">
-                        Subtotal:
-                    </span>
-    
-                    <span class="m-text21 w-size20 w-full-sm">
-                        $39.00
-                    </span>
+                    <h2 class="d-inline">
+                        Subtotal (<%= totalQty %> items):
+                    </h2>
+                    <h2 class="d-inline text-danger">$<%= totalPrice %></h2>
                 </div>
-    
-                <!--  -->
-                <div class="flex-w flex-sb bo10 p-t-15 p-b-20">
-                    <span class="s-text18 w-size19 w-full-sm">
-                        Shipping:
-                    </span>
-    
-                    <div class="w-size20 w-full-sm">
-                        <p class="s-text8 p-b-23">
-                            There are no shipping methods available. Please double check your address, or contact us if you need any help.
-                        </p>
-    
-                        <span class="s-text19">
-                            Calculate Shipping
-                        </span>
-    
-                        <div class="rs2-select2 rs3-select2 rs4-select2 bo4 of-hidden w-size21 m-t-8 m-b-12">
-                            <select class="selection-2" name="country">
-                                <option>Select a country...</option>
-                                <option>US</option>
-                                <option>UK</option>
-                                <option>Japan</option>
-                            </select>
-                        </div>
-    
-                        <div class="size13 bo4 m-b-12">
-                        <input class="sizefull s-text7 p-l-15 p-r-15" type="text" name="state" placeholder="State /  country">
-                        </div>
-    
-                        <div class="size13 bo4 m-b-22">
-                            <input class="sizefull s-text7 p-l-15 p-r-15" type="text" name="postcode" placeholder="Postcode / Zip">
-                        </div>
-    
-                        <div class="size14 trans-0-4 m-b-10">
-                            <!-- Button -->
-                            <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
-                                Update Totals
-                            </button>
-                        </div>
-                    </div>
-                </div>
-    
-                <!--  -->
-                <div class="flex-w flex-sb-m p-t-26 p-b-30">
-                    <span class="m-text22 w-size19 w-full-sm">
-                        Total:
-                    </span>
-    
-                    <span class="m-text21 w-size20 w-full-sm">
-                        $39.00
-                    </span>
-                </div>
-    
+
                 <div class="size15 trans-0-4">
                     <!-- Button -->
-                    <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+                    <a href='/checkout' class="btn flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
                         Proceed to Checkout
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
+    </div>
     <% } else { %>
     <div class="container-fluid">
         <div class="row">
