add check out view

--- a/views/home/cart.ejs
+++ b/views/home/cart.ejs
@@ -30,7 +30,7 @@
                         <tr class="table-row">
                             <td>
                                 <div class="cart-img-product b-rad-4 o-f-hidden">
-                                    <img class="image-fluid" src="<%= product.item.imageUrl[0] %>" alt="IMG-PRODUCT">
+                                    <img class="img-fluid" src="<%= product.item.imageUrl[0] %>" alt="IMG-PRODUCT">
                                 </div>
                             </td>
                             <td><%= product.item.name %></td>
