--- a/views/home/product-detail.ejs
+++ b/views/home/product-detail.ejs
@@ -16,7 +16,7 @@
     </a>
 
     <span class="s-text17">
-        Boxy T-Shirt with Roll Sleeve Detail
+        <%= product.name %>
     </span>
 </div>
 
@@ -28,21 +28,21 @@
                 <div class="wrap-slick3-dots"></div>
 
                 <div class="slick3">
-                    <div class="item-slick3" data-thumb="<%= product[0].imageUrl[0] %>">
+                    <div class="item-slick3" data-thumb="<%= product.imageUrl[0] %>">
                         <div class="wrap-pic-w">
-                            <img src="<%= product[0].imageUrl[0] %>" alt="IMG-PRODUCT">
+                            <img src="<%= product.imageUrl[0] %>" alt="IMG-PRODUCT">
                         </div>
                     </div>
 
-                    <div class="item-slick3" data-thumb="<%= product[0].imageUrl[1] %>">
+                    <div class="item-slick3" data-thumb="<%= product.imageUrl[1] %>">
                         <div class="wrap-pic-w">
-                            <img src="<%= product[0].imageUrl[1] %>" alt="IMG-PRODUCT">
+                            <img src="<%= product.imageUrl[1] %>" alt="IMG-PRODUCT">
                         </div>
                     </div>
 
-                    <div class="item-slick3" data-thumb="<%= product[0].imageUrl[2] %>">
+                    <div class="item-slick3" data-thumb="<%= product.imageUrl[2] %>">
                         <div class="wrap-pic-w">
-                            <img src="<%= product[0].imageUrl[2] %>" alt="IMG-PRODUCT">
+                            <img src="<%= product.imageUrl[2] %>" alt="IMG-PRODUCT">
                         </div>
                     </div>
                 </div>
@@ -51,11 +51,11 @@
 
         <div class="w-size14 p-t-30 respon5">
             <h4 class="product-detail-name m-text16 p-b-13">
-                <%= product[0].name %>
+                <%= product.name %>
             </h4>
 
             <span class="m-text17">
-                $<%= product[0].regularPrice %>
+                $<%= product.regularPrice %>
             </span>
 
             <p class="s-text8 p-t-10">
@@ -112,7 +112,7 @@
 
                         <div class="btn-addcart-product-detail size9 trans-0-4 m-t-10 m-b-10">
                             <!-- Button -->
-                            <a href="products/<%= product[0]._id %>/addToCart" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4 btn">
+                            <a href="/cart/addToCart/<%= product._id %>" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4 btn">
                                 Add to Cart
                             </a>
                         </div>
@@ -121,8 +121,8 @@
             </div>
 
             <div class="p-b-45">
-                <span class="s-text8 m-r-35">SKU: <%= product[0].sku %></span>
-                <span class="s-text8">Categories: <%= product[0].categories %></span>
+                <span class="s-text8 m-r-35">SKU: <%= product.sku %></span>
+                <span class="s-text8">Categories: <%= product.categories %></span>
             </div>
 
             <!--  -->
@@ -135,7 +135,7 @@
 
                 <div class="dropdown-content dis-none p-t-15 p-b-23">
                     <p class="s-text8">
-                        <%= product[0].description %>
+                        <%= product.description %>
                     </p>
                 </div>
             </div>
