--- a/views/home/partials/header.ejs
+++ b/views/home/partials/header.ejs
@@ -72,10 +72,32 @@
 
             <!-- Header Icon -->
             <div class="header-icons">
-                <a href="/users/login" class="header-wrapicon1 dis-block">
-                    <img src="/images/icons/icon-header-01.png" class="header-icon1" alt="ICON">
-                </a>
-                
+                <% if (!user) { %>
+                    <a href="/users/login" class="header-wrapicon1 dis-block">
+                        <img src="/images/icons/icon-header-01.png" class="header-icon1" alt="ICON">
+                    </a>
+                <% } else { %>
+                    <div class="dropdown">
+                        <button class="btn shadow p-0 bg-white rounded dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="d-block">
+                                Hello, <%= user.name %>
+                            </span>
+                            <span class="d-block">
+                                <h6>Account & List</h6>
+                            </span>
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <% if(user.role.includes('Admin') || user.role.includes('Employee')) { %>
+                                <a class="dropdown-item" href="/admin">Admin Dashboard</a>
+                            <% } %>
+                            <a class="dropdown-item" href="/users/profile">Your Profile</a>
+                            <a class="dropdown-item" href="/users/order">Your Order</a>
+                            <a class="dropdown-item" href="/users/changePassword">Change Your Password</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/users/logout">Log Out</a>
+                        </div>
+                    </div>
+                <% } %>
                 <span class="linedivide1"></span>
 
                 <div class="header-wrapicon2">
@@ -103,16 +125,18 @@
         <div class="btn-show-menu">
             <!-- Header Icon mobile -->
             <div class="header-icons-mobile">
-                <a href="#" class="header-wrapicon1 dis-block">
-                    <img src="/images/icons/icon-header-01.png" class="header-icon1" alt="ICON">
-                </a>
-
                 <span class="linedivide2"></span>
-
-                <div class="header-wrapicon2">
-                    <img src="/images/icons/icon-header-02.png" class="header-icon1 js-show-header-dropdown" alt="ICON">
-                    <span class="header-icons-noti">0</span>
-                </div>
+                <a href="/cart/viewCart">
+                    <div class="header-wrapicon2">
+                        <img src="/images/icons/icon-header-02.png" class="header-icon1 js-show-header-dropdown" alt="ICON">
+                        <% if (session.cart) { %>
+                            <span class="header-icons-noti"> <%= session.cart.totalQty %></span>
+                        <% } else { %>
+                            <span class="header-icons-noti">0</span>
+                        <% } %>
+                    </div>
+                </a>
+               
             </div>
 
             <div class="btn-show-menu-mobile hamburger hamburger--squeeze">
@@ -136,7 +160,7 @@
                 <li class="item-topbar-mobile p-l-20 p-t-8 p-b-8">
                     <div class="topbar-child2-mobile">
                         <span class="topbar-email">
-                            fashe@example.com
+                            info@example.com
                         </span>
 
                         <div class="topbar-language rs1-select2">
@@ -168,7 +192,7 @@
                 </li>
 
                 <li class="item-menu-mobile">
-                    <a href="/products">Sale</a>
+                    <a href="/products/onSale">Sale</a>
                 </li>
 
                 <li class="item-menu-mobile">
@@ -186,6 +210,31 @@
                 <li class="item-menu-mobile">
                     <a href="/contact">Contact</a>
                 </li>
+
+                <li class="item-menu-mobile">
+                    <% if (!user) { %>
+                        <a href="/users/login">Login</a>
+                    <% } else { %>
+                        <div class="dropdown">
+                            <button  style="background-color: transparent" class="btn shadow p-0 bg-white rounded dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span class="d-block">
+                                    <h6>My Account & List</h6>
+                                </span>
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <% if(user.role.includes('Admin') || user.role.includes('Employee')) { %>
+                                    <a class="dropdown-item" href="/admin">Admin Dashboard</a>
+                                <% } %>
+                                <a class="dropdown-item" href="/users/profile">Your Profile</a>
+                                <a class="dropdown-item" href="/users/order">Your Order</a>
+                                <a class="dropdown-item" href="/users/changePassword">Change Your Password</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="/users/logout">Log Out</a>
+                            </div>
+                        </div>
+                    <% } %>
+                </li>
+
             </ul>
         </nav>
     </div>
