update checkout view

--- a/views/home/checkout.ejs
+++ b/views/home/checkout.ejs
@@ -2,68 +2,200 @@
 <div class="container-fluid px-lg-5 m-t-50 m-b-50">
     <form action="/checkout" action="post" id="payment-form">
         <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
-        <div class="row">      
+
+        <div class="row">
             <div class="col-sm-12 col-md-8 col-lg-8">
                 <hr/>
-                <h2 class="m-t-10 m-b-10">Shipping Address</h2>
-                    <div class="form-group row">
-                        <label class="col-sm-3 col-form-label" for="name">Name:</label>
-                        <div class="col-sm-9">
-                            <input type="text" id="name" class="form-control" name="name" required>
+                <div class="row">      
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <div class="container-fluid">
+                            <div class="float-left">
+                                <h2>Shipping address</h2>
+                            </div>
+                            <div class="float-right">
+                                <a data-toggle="collapse" href="#collapseShippingAddress" role="button" aria-expanded="true" aria-controls="collapseShippingAddress">
+                                    Change address
+                                </a>
+                            </div>
                         </div>
                     </div>
+                </div>
+                    
+                <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-12 collapse" id="collapseShippingAddress">
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="name">Name:</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="name" class="form-control" name="name" required>
+                            </div>
+                        </div>
+        
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="shippingAddress">Address:</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="shippingAddress" class="form-control" required name="shippingAddress">
+                            </div>
+                        </div>
+        
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="city">City:</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="city" class="form-control" required name="city">
+                            </div>
+                        </div>
+        
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="state">State/Province/Region:</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="state" class="form-control" required name="state">
+                            </div>
+                        </div>
+        
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="zip">ZIP:</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="zip" class="form-control" required name="zip">
+                            </div>
+                        </div>
+        
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="country">Country/Region:</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="country" class="form-control" required name="country">
+                            </div>
+                        </div>
+        
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="phone">Phone number:</label>
+                            <div class="col-sm-9">
+                                <input type="tel" id="phone" class="form-control" required name="phone">
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
 
-                    <div class="form-group row">
-                        <label class="col-sm-3 col-form-label" for="shippingAddress">Address:</label>
-                        <div class="col-sm-9">
-                            <input type="text" id="shippingAddress" class="form-control" required name="shippingAddress">
+                <hr/>
+                <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <div class="container-fluid">
+                            <div class="float-left">
+                                <h2>Credit card info</h2>
+                            </div>
+                            <div class="float-right">
+                                <a data-toggle="collapse" href="#collapseCreditCard" role="button" aria-expanded="true" aria-controls="collapseCreditCard">
+                                    Enter your credit card
+                                </a>
+                            </div>
                         </div>
                     </div>
-
-                    <div class="form-group row">
-                        <label class="col-sm-3 col-form-label" for="city">City:</label>
-                        <div class="col-sm-9">
-                            <input type="text" id="city" class="form-control" required name="city">
+                </div>
+            
+                <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-12 collapse" id="collapseCreditCard">
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="card-element">
+                                Credit or debit card:
+                            </label>
+                            <div class="col-sm-9" id="card-element"></div>
+                            <div id="card-errors" role="alert"></div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="card-name">Card holder name:</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="card-name" class="form-control" name="cardName" required>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="billingAddress">Billing address:</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="billingAddress" class="form-control" name="billingAddress" required>
+                            </div>
                         </div>
                     </div>
-
-                    <div class="form-group row">
-                        <label class="col-sm-3 col-form-label" for="state">State/Province/Region:</label>
-                        <div class="col-sm-9">
-                            <input type="text" id="state" class="form-control" required name="state">
+                </div>
+                <hr/>
+                <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <h2 class="m-l-15 m-t-10 m-b-10">Review items and shipping</h2>
+                        <div class="container">
+                            <div class="row">
+                                <div class="table table-responsive col-sm-12 col-md-6 col-lg-6">
+                                    <table>
+                                        <tbody>
+                                            <% products.forEach(function(product) { %>
+                                            <tr class="mw-100 p-3">
+                                                <td class="h-50 mx-auto my-auto">
+                                                    <img src="<%= product.item.imageUrl[0] %>" alt="image" class="img-fluid img-responsive img-thumbnail rounded" width="100px" height="100%"/>
+                                                </td>
+                                                <td>
+                                                    <address>
+                                                        <p><b><%= product.item.name %></b></p>
+                                                        <p style="color:red">$<%= product.price %></p>
+                                                        <p><strong>Qty: </strong><%= product.qty %></p>
+                                                        <% if(product.item.status) { %>
+                                                            <p style="color:green">In stock</p>    
+                                                        <% } else { %>
+                                                            <p style="color:red">Out of stock</p>
+                                                        <% } %>
+                                                    </address>
+                                                </td>
+                                            </tr>
+                                            <% }) %>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="col-sm-12 col-md-6 col-lg-6">
+                                    <div class="m-t-3 m-b-3">
+                                        <h4>Choose your delivery option:</h4>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="option" id="delivery" value="delivery" checked>
+                                        <label class="form-check-label" for="delivery">
+                                            Inside Hanoi
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="option" id="delivery" value="delivery">
+                                        <label class="form-check-label" for="delivery">
+                                            Outside Hanoi
+                                        </label>
+                                    </div>
+                                    <hr/>
+                                    <div class="m-t-3 m-b-3">
+                                        <h4>Or pick up at one of our stores:</h4>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="option" id="pickup" value="pickup">
+                                        <label class="form-check-label" for="pickup">
+                                            Store 1
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="option" id="pickup" value="pickup">
+                                        <label class="form-check-label" for="pickup">
+                                            Store 2
+                                        </label>
+                                    </div>
+                                </div>
+                            </div> 
                         </div>
+                        <hr/>
                     </div>
-
-                    <div class="form-group row">
-                        <label class="col-sm-3 col-form-label" for="zip">ZIP:</label>
-                        <div class="col-sm-9">
-                            <input type="text" id="zip" class="form-control" required name="zip">
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <label class="col-sm-3 col-form-label" for="country">Country/Region:</label>
-                        <div class="col-sm-9">
-                            <input type="text" id="country" class="form-control" required name="country">
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <label class="col-sm-3 col-form-label" for="phone">Phone number:</label>
-                        <div class="col-sm-9">
-                            <input type="tel" id="phone" class="form-control" required name="phone">
-                        </div>
-                    </div>
+                </div>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 position-fixed">
+
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <hr/>
                 <div class="container">
                     <div class="justify-content-center m-t-10 m-b-10">
-                        <input type="submit" value="Submit Payment" class="submit flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4"/>
+                        <button type="submit" class="btn flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4">Place Your Order</button>
+                        <span><p class="text-center">By placing your order, you agree to Wallpaper's <a href="#">privacy notice</a> and <a href="#">conditions of use</a>.</p></span>
                     </div>
                     <hr/>   
                     <div>
                         <p class="text-center">
-                            <h6 class="m-t-10 m-b-10">Order Summary</h6>
+                            <h6 class="m-t-10 m-b-10"><strong>Order Summary</strong></h6>
                             <div>Items (<%= totalQty %>): <span class="float-right">$<%= totalPrice %></span></div>
                             <div>Shipping & Handling: <span class="float-right">$0.00</span></div><hr/>
                             <div>Total before tax: <span class="float-right">$<%= totalPrice %></span></div>
@@ -74,67 +206,11 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-8 col-lg-8">
-                <hr/>
-                <h2 class="m-t-10 m-b-10">Credit Card Info</h2>
-                <div class="form-group row">
-                    <label class="col-sm-3 col-form-label" for="card-element">
-                        Credit or debit card:
-                    </label>
-                    <div class="col-sm-9" id="card-element"></div>
-                    <div id="card-errors" role="alert"></div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-3 col-form-label" for="card-name">Card holder name:</label>
-                    <div class="col-sm-9">
-                        <input type="text" id="card-name" class="form-control" name="cardName" required>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-3 col-form-label" for="billingAddress">Billing address:</label>
-                    <div class="col-sm-9">
-                        <input type="text" id="billingAddress" class="form-control" name="billingAddress" required>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+
+
         
-        <div class="row">
-            <div class="col-sm-12 col-md-8 col-lg-8">
-                <hr/>
-                <h2 class="m-t-10 m-b-10">Review items and shipping</h2>
-                <div class="container">
-                    <div class="row">
-                        <div class="table table-responsive col-sm-12 col-md-6 col-lg-6">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th class="th-sm" scope="col"></th>
-                                        <th class="th-sm" scope="col">Product</th>
-                                        <th class="th-sm" scope="col">Quantity</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <% products.forEach(function(product) { %>
-                                    <tr class="mw-100 p-3">
-                                        <td class="h-50 mx-auto my-auto"><img src="<%= product.item.imageUrl[0] %>" alt="image" class="img-fluid img-thumbnail rounded" width="100px" /></td>
-                                        <td><%= product.item.name %></td>
-                                        <td><%= product.qty %> </td>
-                                    </tr>
-    
-                                    <% }) %>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="col-sm-12 col-md-6 col-lg-6">
-                            <!-- <img src="/images/item-01.jpg" alt="image" class="image-fluid" /> -->
-                        </div>
-                    </div> 
-                </div>
-                <hr/>
-            </div>
-        </div>
+            
     </form>
 </div>
 
