--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,18 +21,18 @@
     padding: 10px 12px;
     border-radius: 4px;
     border: 1px solid transparent;
-    box-shadow: 0 1px 3px 0 #e6ebf1;
+    box-shadow: 0 1px 3px 0 #b8bcc0;
     -webkit-transition: box-shadow 150ms ease;
     transition: box-shadow 150ms ease;
 }
 
 .StripeElement--focus, #card-name, #billingAddress, #name,
 #shippingAddress, #city, #state, #zip, #country, #phone{
-    box-shadow: 0 1px 3px 0 #cfd7df;
+    box-shadow: 0 1px 3px 0 #b8bcc0;
 }
 
 .StripeElement--invalid{
-    border-color: #fa755a;
+    border-color: #e93916;
 }
 
 .StripeElement--webkit-autofill{
