--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,8 @@
   
 </head>
 <body class="animsition">
+	<!--===============================================================================================-->
+	<script src="https://js.stripe.com/v3/"></script>
 	
 	<!-- Page Content -->
 	<%- body %>
