add order view for admin page

--- a/views/admin/sidebar-wrapper.ejs
+++ b/views/admin/sidebar-wrapper.ejs
@@ -3,14 +3,7 @@
         <!-- <a href="/" class="sidebar-brand">Home </a> -->
         <a href="/admin"><i class="fas fa-tachometer-alt"></i> Dashboard </a>
 
-        <button class="dropdown-btn"><i class="fa fa-cart-plus"></i> Orders
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-container">
-            <a href="/admin/addOrder">Add Order </a>
-            <a href="/admin/editOrder">Edit Order </a>
-            <a href="/admin/viewOrder">View Order </a>
-        </div>
+        <a href="/admin/orders"><i class="fas fa-cart-plus"></i> Orders</a>
         
         <a href="/admin/product"><i class="fas fa-box-open"></i> Product </a>
         
